[gd_scene load_steps=2 format=3 uid="uid://c687hqol6miex"]

[ext_resource type="Script" path="res://ui/CheckpointSelect.gd" id="1_2pyb1"]

[node name="CheckpointSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource("1_2pyb1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 610.0
offset_right = 800.0
offset_bottom = 801.0

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
allow_search = false
auto_height = true
fixed_column_width = 100
icon_scale = 0.1

[connection signal="item_activated" from="VBoxContainer/ItemList" to="." method="_on_item_list_item_activated"]
[connection signal="item_clicked" from="VBoxContainer/ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="item_selected" from="VBoxContainer/ItemList" to="." method="_on_item_list_item_activated"]
